<resources>
    <string name="app_name">Market</string>
    <!--system-->
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="server_error">Server error</string>

    <!--message dialog-->
    <string name="dialog_title_default">Error</string>
    <string name="dialog_subtitle_default">Something went wrong</string>
    <string name="dialog_ok">OK</string>

    <!--navigation-->
    <string name="technique">Technique</string>
    <string name="appliances">Appliances</string>
    <string name="sport">Sport</string>
    <string name="clothes">Clothes</string>
    <string name="business">Business</string>

    <!--goods-->
    <string name="no_results_found">No Results Found</string>


</resources>
